--- a/.env.example
+++ b/.env.example
@@ -56,3 +56,5 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+SMSPOH_API_KEY=GmAhgOffLQhNL0xS3_5MNJ1oTbzzDwSofOamy5t8_OhkZt6F4mU6pXPV1fw1VWyX
