--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,11 @@
         "spatie/laravel-ignition": "^1.0"
     },
     "autoload": {
+        "files": [
+            "app/Http/Helpers/Helper.php",
+            "app/Http/Helpers/JsonHelper.php",
+            "app/Http/Helpers/CRUDHelper.php"
+        ],
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
