--- a/.env.example
+++ b/.env.example
@@ -58,3 +58,7 @@ VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 SMSPOH_API_KEY=GmAhgOffLQhNL0xS3_5MNJ1oTbzzDwSofOamy5t8_OhkZt6F4mU6pXPV1fw1VWyX
+PUSHER_APP_ID=1503332
+PUSHER_APP_KEY=8b9200948941eff7a01a
+PUSHER_APP_SECRET=2e970607947639acb490
+PUSHER_APP_CLUSTER=ap4
